--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "json-cyclic": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typedoc": "^0.22.10",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
