--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.2",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.6.1",
+    "graphql": "^16.2.0",
+    "graphql-tools": "^8.2.0",
     "json-cyclic": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
