--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.2",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.2.4",
     "apollo-server-express": "^3.6.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.2.0",
+    "graphql-playground": "^1.3.17",
     "graphql-tools": "^8.2.0",
     "json-cyclic": "^1.0.2",
     "reflect-metadata": "^0.1.13",
