--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "test:e2e": "jest --config ./e2e/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^8.2.4",
     "@nestjs/config": "^1.1.5",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^8.2.4",
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/platform-express": "^8.2.4",
     "apollo-server-express": "^3.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "got": "^12.0.0",
     "graphql": "^16.2.0",
     "graphql-playground": "^1.3.17",
     "graphql-tools": "^8.2.0",
@@ -36,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "superagent": "^6.1.0",
     "typedoc": "^0.22.10",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
