--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,12 @@ DUMMY_API_ACCEPT=application/json
 DUMMY_API_CONNECTION_TIMEOUT=5000
 DUMMY_API_READ_TIMEOUT=10000
 DUMMY_RETRY_COUNT=3
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_TIMEOUT=5000
+REDIS_KEEP_ALIVE=30000
+REDIS_SESSION_PREFIX=session
+
+SESSIOM_SECRET=my-secret
+SESSION_MAX_AGE=300000
