--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "apollo-server-express": "^3.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-redis": "^6.0.0",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.2",
     "got": "^12.0.0",
     "graphql": "^16.2.0",
     "graphql-playground": "^1.3.17",
     "graphql-tools": "^8.2.0",
+    "ioredis": "^4.28.3",
     "json-cyclic": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -46,7 +50,10 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.7",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
